--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,11 @@
 
     <application
         android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:icon="@mipmap/ic_launcher">
+        android:theme="@style/AppTheme">
 
 
         <provider
@@ -35,12 +36,14 @@
         <activity android:name=".settings.SettingsActivity">
 
         </activity>
-        <activity android:name=".PreviewActivity"
+        <activity
+            android:name=".PreviewActivity"
             android:screenOrientation="portrait">
 
         </activity>
 
-        <activity android:name=".InstructionsActivity"
+        <activity
+            android:name=".InstructionsActivity"
             android:launchMode="singleTop">
 
         </activity>
