--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,13 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 32
     defaultConfig {
         applicationId "com.tzkt.andrey.instapano"
         minSdkVersion 21
-        targetSdkVersion 27
+        targetSdkVersion 32
         versionCode 5
         versionName "1.12"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -17,23 +15,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    productFlavors {
-    }
 }
 
 dependencies {
 
-    implementation "com.android.support:preference-v7:$support_version"
+    implementation 'androidx.preference:preference:1.2.0'
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
-    implementation "com.android.support:design:$support_version"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.android.material:material:1.6.1'
 
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
 repositories {
     mavenCentral()
